# wintermute

./: .astylerc  .clang-format  .clang_format  .ctags  .editorconfig  .gdbinit  .gdbscript  .gitignore  .local.vimrc  .mailmap  .travis.yml  .ycm_extra_conf.py  AUTHORS  BUGS  BUGS.markdown  BUGS.md  CMakeLists.txt  CNAME  CONTRIBUTING.markdown  CONTRIBUTING.md  CTestConfig.cmake  Cargo.toml  Doxyfile  Doxyfile.in  HACKING  HACKING.markdown  INSTALL  INSTALL.data-api  INSTALL.markdown  INSTALL.md  LICENSE.txt  NEWS  README  README.data-api  README.markdown  README.md  README.nlui-wintermute  TESTING  TESTING.markdown  TESTING.md  (+16 more)
cmake/: CMakeLists.txt  Doxyfile.in  FindLibConfig.cmake  FindLibUv.cmake  FindPlugin.cmake.in  FindZeroMQCXX.cmake  WintermuteConfig.cmake  WintermuteConfig.cmake.in  WintermuteConfigVersion.cmake  WintermuteConfigVersion.cmake.in  WintermuteDependencies.cmake  WintermuteDocumentation.cmake  WintermuteFunctionDependencies.cmake  WintermuteHeaderDependencies.cmake  WintermuteInternal.cmake  WintermuteMacros.cmake  WintermutePlugin.cmake  WintermuteSourceBuild.cmake  WintermuteTest.cmake  WintermuteTestMacros.cmake  WintermuteVariables.cmake  WintermuteVersion.cmake  _base.cmake  cmake_uninstall.cmake.in  dbus_service.cmake.in  defaults.cmake  plugin-dbus-service.cmake.in  plugin_driver.hh.in  pluginspec.in  test_template.cpp
cmake/Modules/: CMakeLists.txt  CMakeProvideUninstallTarget.cmake  CMakeUseLocalModules.cmake  FindQCA.cmake  FindWintermute.cmake  FindWintermute.cmake.in  FindZeroMQ.cmake  FindZeroMQCXX.cmake  GCovMacros.cmake  GetGitRevisionDescription.cmake  GitMethods.cmake  TestingTargets.cmake  UseWintermute.cmake  ValgrindMacros.cmake  WinterDefaults.cmake  WinterLibsDependencies.cmake  WinterMacros.cmake  WintermuteCI.cmake  WintermuteDefaults.cmake  WintermuteDefaults.cmake.in  WintermuteDependencies.cmake  WintermuteDocumentation.cmake  WintermuteFlagDependencies.cmake  WintermuteFunctionDependencies.cmake  WintermuteMacros.cmake  WintermutePlugin.cmake  WintermutePluginMacros.cmake  WintermuteTest.cmake  WintermuteTestMacros.cmake  WintermuteTesting.cmake  WintermuteTestingMacros.cmake  WintermuteVariables.cmake  WintermuteVersion.cmake  WintermuteVersioning.cmake
cmake/Scripts/: tests.rb
cmake/Templates/: CMakeLists.txt  Doxyfile.in  PluginDefinition.spec.in  plugin_driver.hh.in
cmake/doc/: CMakeLists.txt  layout.xml
lib/: CMakeLists.txt
lib/daemon/: CMakeLists.txt  Plugin  README.md  globals.hpp  globals.hpp.in  module.cpp  module.hpp  plugin.cpp  plugin.hpp
lib/dbus/: CMakeLists.txt  README.md  adaptor.cpp  adaptor.hpp  dispatcher.cpp  dispatcher.hpp  globals.hpp  globals.hpp.in  module.cpp  module.hpp  plugin.cpp  plugin.hpp  receiver.cpp  receiver.hpp
lib/heartbeat/: CMakeLists.txt  README.md  globals.hpp.in  module.cpp  module.hpp  plugin.cpp  plugin.hpp
lib/zeromq/: CMakeLists.txt  README.md  dispatcher.cpp  dispatcher.hpp  globals.hpp.in  module.cpp  module.hpp  plugin.cpp  plugin.hpp  receiver.cpp  receiver.hpp
src/: CMakeLists.txt  abstractplugin.cpp  abstractplugin.hpp  adaptors.cpp  adaptors.hpp  adaptorsprivate.hpp  backend.cpp  backend.hpp  config.hpp.in  core.cpp  core.hpp  coreprivate.hpp  debug.cpp  debug.hpp  diagnoser.cpp  diagnoser.hpp  factory.cpp  factory.hpp  factoryprivate.hpp  global.hpp  global.hpp.in  globals.hpp.in  ipc.cpp  ipc.hpp  ipcprivate.hpp  logging.cpp  logging.hpp  main.cpp  ncurses.cpp  ncurses.hpp  plugin.cpp  plugin.hpp  pluginhandle.cpp  pluginhandle.hpp  pluginhandleprivate.hpp  pluginprivate.hpp  plugins.cpp  plugins.hpp  shellplugin.cpp  shellplugin.hpp  (+2 more)
src/Wintermute/: Application  Arguments  Configuration  Factory  Globals  Logging  Plugin  PluginInterfaceable  PluginProcess  Procedures  Version  application.cpp  application.hpp  arguments.cpp  arguments.hpp  configuration.cpp  configuration.hpp  factory.cpp  factory.hpp  logging.cpp  logging.hpp  plugin.cpp  plugin.hpp  plugin_interfaceable.cpp  plugin_interfaceable.hpp  plugin_process.cpp  plugin_process.hpp  plugininterfaceable.cpp  plugininterfaceable.hpp  temporary_plugin.cpp  temporary_plugin.hpp  temporaryplugin.cpp  temporaryplugin.hpp  version.cpp  version.hpp
src/app/: CMakeLists.txt  abstractplugin.cpp  abstractplugin.hpp  adaptors.cpp  adaptors.cxx  adaptors.hpp  adaptors.hxx  backend.cpp  backend.hpp  config.hpp.in  core.cpp  core.cxx  core.hpp  core.hxx  debug.cpp  debug.hpp  diagnoser.cpp  diagnoser.hpp  factory.cpp  factory.cxx  factory.hpp  factory.hxx  global.hpp  ipc.cpp  ipc.hpp  logging.cpp  logging.hpp  main.cpp  plugin.cpp  plugin.cxx  plugin.hpp  plugin.hxx  pluginhandle.cpp  pluginhandle.hpp  plugins.hpp  shellplugin.cxx  shellplugin.h  wintermute.hpp
src/core/: CMakeLists.txt  driver.cpp  driver.hpp  export.hpp.in  plugin.cpp  plugin.hpp  version.cpp  version.hpp
src/libwintermutecore/: CMakeLists.txt  designation.cpp  designation.hh  designation.hpp  dispatcher.cpp  dispatcher.hpp  globals.cpp  globals.hpp.in  logging.cpp  logging.hpp  message.cpp  message.hh  message.hpp  message_serializer.cpp  message_serializer.hpp  module.cpp  module.hh  module.hpp  module_designation.cpp  module_designation.hh  module_poll.hpp  module_pool.cpp  module_pool.hh  module_pool.hpp  plugin.cpp  plugin.hh  plugin.hpp  plugin_library.cpp  plugin_library.hh  plugin_version.cpp  receiver.hpp  tunnel.cpp  tunnel.hh  tunnel.hpp
src/plugins/: CMakeLists.txt  abstractplugin.cpp  abstractplugin.hpp  factory.cpp  factory.hpp  include.cmake.in  pluginhandle.cpp  pluginhandle.hpp  plugins.hpp
src/test/: CMakeLists.txt
src/wintermute-core/: CMakeLists.txt  call.hpp  event_loop.hh  event_object.hh  event_poller.hh  event_timer.cpp  event_timer.hh  events.hpp  globals.hpp.in  library.cpp  library.hh  library.hpp  logging.cpp  logging.hpp  message.cc  message.cpp  message.hh  message.hpp  method.hh  method.hpp  module.hh  module.hpp  module_call.cc  module_call.hh  module_pool.hh  (+11 more)
test/: CMakeLists.txt  CTestConfig.cmake.in  DartConfiguration.tcl.in  bootstrap  build_dependencies.bash  build_deps.sh  test_globals.hpp.in
(+596 files in other folders)
